 + New call: AddMissionHog(health): Add a hedgehog for the mission team
 + New call: SetTeamPassive(teamname, isPassive): Mark a team as passive. Passive teams do not play and are treated like frozen teams.
 + New call: IsHogAlive(gear): Returns true if gear is a hegehog which is alive, not about to die and not hidden
 + New return value: AddTeam/AddMissionTeam return <real team name>, <team index>
 + SetClanColor: Now accepts negative color argument for user clan color, like in AddTeam
 + AddTeam: Append “_qau” to voicepack name to enable automatic selection of voicepack language
 + ShowMission: Add new icons: hedgehog (10), flags (11)
 + Utils library: New calls: getReadableChallengeRecord, updateChallengeRecord, integerSqrt, integerHypotenuse
 + New callback: onGameResult(winningClan): Called when the game ends normally. winningClan = index of winning clan or -1 on draw
 + New callback: onCaseDrop(gear): Called at the point where a crate MIGHT be dropped between turns. Gear is the crate gear or nil
 + New callback: onHogSwitch(oldHog): Called when hogs was switched with the “switch hedgehog” utility
 + SendStat extension: Option to use predefined modes with siPointType, like "!POINTS" or "!TIME"
 + SimpleMission: Add isMissionTeam attribute for teams
 + SpeedShoppa/TargetPractice libraries: Remove custom hog and team info settings
 + TargetPractice library: Add faceLeft parameter
 + Params explode, poison in the SpawnFake*Crate functions now optional and default to false
 + New global: InitHealth: Initial hog health value from game scheme (read-only)
 + Animate library: AnimOutOfNowhere: destX and destY are now optional (default: current position)
 * Fix SetClanColor causing crashes and severe rendering bugs
 * Fix SetAmmoDelay not working properly when called after onGameStart
 * Fix DismissTeam not clearing team properly
 * SimpleMission: Fix Lua error spam when a custom goal fails
 * gstWinner state is preserved after the game ended